# jinzo

./: Cargo.toml  README.md  on_writing_well.txt
src/: gpt2.rs  lr_scheduler.rs  main.rs
src/gpt2/: model.rs
