[package]
name = "jinzo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Enable the `metal` feature for both `candle-core` and `candle-nn`
candle-core = { version = "0.6.0", features = ["metal"] }
candle-nn = { version = "0.6.0", features = ["metal"] }
clap = { version = "4.5.19", features = ["derive"] }
# dioxus = "0.5.6"
rand = "0.8.5"
tokenizers = { version = "0.20.0", features = ["http"] }

[features]
mkl = []
accelerate = []

[build-dependencies]
cc = "1.0"

